<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#dfdac8">

    <TextView
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="计算器"
        android:gravity="center"/>

    <include layout="@layout/text_view"
        android:id="@+id/text_view_all"
        android:layout_width="match_parent"
        android:layout_height="100dp">
    </include>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center">
           <Button
               android:id="@+id/left_bracket_but"
               android:text="@string/left_bracket"
               android:textColor="#fff"
               android:textSize="20dp"
               android:layout_margin="2.5dp"
               android:background="@drawable/selector_other_but"
               android:layout_width="65dp"
               android:layout_height="61dp" />
           <Button
               android:id="@+id/right_bracket_but"
               android:text="@string/right_bracket"
               android:textColor="#fff"
               android:textSize="20dp"
               android:layout_margin="2.5dp"
               android:background="@drawable/selector_other_but"
               android:layout_width="65dp"
               android:layout_height="61dp" />

           <Button
               android:id="@+id/divide_but"
               android:text="@string/divide"
               android:textColor="#fff"
               android:textSize="20dp"
               android:layout_margin="2.5dp"
               android:background="@drawable/selector_other_but"
               android:layout_width="65dp"
               android:layout_height="61dp" />

           <Button
               android:id="@+id/multiply_but"
               android:text="@string/multiply"
               android:textColor="#fff"
               android:textSize="20dp"
               android:layout_margin="2.5dp"
               android:background="@drawable/selector_other_but"
               android:layout_width="65dp"
               android:layout_height="61dp" />
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/seven_but"
                android:layout_margin="2.5dp"
                android:text="@string/seven"
                android:textSize="20dp"
                android:background="@drawable/selector_number_but"
                android:layout_width="65dp"
                android:layout_height="61dp" />
            <Button
                android:id="@+id/eight_but"
                android:layout_margin="2.5dp"
                android:text="@string/eight"
                android:textSize="20dp"
                android:background="@drawable/selector_number_but"
                android:layout_width="65dp"
                android:layout_height="61dp" />
            <Button
                android:id="@+id/nine_but"
                android:layout_margin="2.5dp"
                android:text="@string/nine"
                android:textSize="20dp"
                android:background="@drawable/selector_number_but"
                android:layout_width="65dp"
                android:layout_height="61dp" />
            <Button
                android:id="@+id/subtract_but"
                android:text="@string/subtract"
                android:textColor="#fff"
                android:textSize="20dp"
                android:layout_margin="2.5dp"
                android:background="@drawable/selector_other_but"
                android:layout_width="65dp"
                android:layout_height="61dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/four_but"
                android:layout_margin="2.5dp"
                android:text="@string/four"
                android:textSize="20dp"
                android:background="@drawable/selector_number_but"
                android:layout_width="65dp"
                android:layout_height="61dp" />
            <Button
                android:id="@+id/five_but"
                android:layout_margin="2.5dp"
                android:text="@string/five"
                android:textSize="20dp"
                android:background="@drawable/selector_number_but"
                android:layout_width="65dp"
                android:layout_height="61dp" />
            <Button
                android:id="@+id/six_but"
                android:layout_margin="2.5dp"
                android:text="@string/six"
                android:textSize="20dp"
                android:background="@drawable/selector_number_but"
                android:layout_width="65dp"
                android:layout_height="61dp" />
            <Button
                android:id="@+id/plus_but"
                android:text="@string/plus"
                android:textColor="#fff"
                android:textSize="20dp"
                android:layout_margin="2.5dp"
                android:background="@drawable/selector_other_but"
                android:layout_width="65dp"
                android:layout_height="61dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/one_but"
                        android:layout_margin="2.5dp"
                        android:text="@string/one"
                        android:textSize="20dp"
                        android:background="@drawable/selector_number_but"
                        android:layout_width="65dp"
                        android:layout_height="61dp" />
                    <Button
                        android:id="@+id/two_but"
                        android:layout_margin="2.5dp"
                        android:text="@string/two"
                        android:textSize="20dp"
                        android:background="@drawable/selector_number_but"
                        android:layout_width="65dp"
                        android:layout_height="61dp" />
                    <Button
                        android:id="@+id/three_but"
                        android:layout_margin="2.5dp"
                        android:text="@string/three"
                        android:textSize="20dp"
                        android:background="@drawable/selector_number_but"
                        android:layout_width="65dp"
                        android:layout_height="61dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <Button
                        android:id="@+id/delete_but"
                        android:layout_margin="2.5dp"
                        android:background="@drawable/selector_delete_but"
                        android:layout_width="65dp"
                        android:layout_height="61dp" />
                    <Button
                        android:id="@+id/zero_but"
                        android:layout_margin="2.5dp"
                        android:text="@string/zero"
                        android:textSize="20dp"
                        android:background="@drawable/selector_number_but"
                        android:layout_width="65dp"
                        android:layout_height="61dp" />
                    <Button
                        android:id="@+id/point_but"
                        android:layout_margin="2.5dp"
                        android:text="@string/point"
                        android:textSize="20dp"
                        android:background="@drawable/selector_number_but"
                        android:layout_width="65dp"
                        android:layout_height="61dp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/equal_but"
                android:layout_margin="2.5dp"
                android:layout_width="65dp"
                android:layout_height="127dp"
                android:text="@string/equal"
                android:textColor="#fff"
                android:textSize="30dp"
                android:background="@drawable/selector_equal_but"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
